--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </div>
                         <div class="input-group">
                             <label for="">Mensaje</label>
-                            <textarea name="" id="" cols="30" rows="10">
+                            <textarea name="" id="" rows="5">
 
                             </textarea>
                         </div>
